fix(style): remove padding reset for last child elements
This causes unwanted padding result for syntax highlighted code blocks.

--- a/_app/assets/less/app.less
+++ b/_app/assets/less/app.less
@@ -238,17 +238,14 @@ body:hover .latest {
 
     // article > p
     > *:last-child {
-      padding-bottom: 0 !important;
       margin-bottom: 0 !important;
 
       // article > ul > li
       > *:last-child {
-        padding-bottom: 0 !important;
         margin-bottom: 0 !important;
 
         // article > ul > li > p
         > *:last-child {
-          padding-bottom: 0 !important;
           margin-bottom: 0 !important;
         }
       }
